Fix overview transactions spacing

--- a/app/style/HomePage.less
+++ b/app/style/HomePage.less
@@ -58,7 +58,8 @@
   left: 0px;
   padding: 16px 60px 30px 60px;
   background-color: var(--background-container);
-  width: 100%;
+  display: flex;
+  flex-direction: row;
 }
 
 .overview-balance-spendable-locked {
@@ -83,8 +84,6 @@
 }
 
 .recent-transactions {
-  float: left;
-  width: 352px;
   margin-right: 41px;
   margin-top: 27px;
 }
