--- a/app/style/TxHistory.less
+++ b/app/style/TxHistory.less
@@ -45,6 +45,7 @@
 
 .tx-history-row-wrapper {
   float: left;
+  width: 100%;
 }
 
 .is-overview-pending {
@@ -59,7 +60,6 @@
   cursor: pointer;
   transition: all 100ms cubic-bezier(0.86, 0, 0.07, 1) 0s;
   height: 30px;
-  width: 323px;
 }
 
 .tx-history-row.is-row-pending {
@@ -183,7 +183,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   position: absolute;
-  max-width: 200px;
+  max-width: 100px;
   margin: 22px 0px 0px 35px;
 }
 
